[project]
name = "nokch"
version = "0.1.5"
description = ""
authors = [
    {name = "thesignumt",email = "tcrrxzz@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
nokch = "nokch.cli:main"

[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/thesignumt/nokch.git"
